--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-# Core dependencies for Snowpipe Streaming v2 REST API
+# Core dependencies
 requests>=2.31.0
 PyJWT>=2.8.0
 cryptography>=41.0.0
+
+# Snowflake Python Connector (for direct inserts)
+snowflake-connector-python>=3.6.0
 
 # Raspberry Pi sensors (for real hardware)
 # Uncomment these if you have physical sensors connected
